app/styles/css/style.css
/* ... */
.header__menu ul li:last-child {
	margin-right: 0;
}

.header__menu ul li a {
	font-size: 14px;
	color: #252525;
	text-transform: uppercase;
	font-weight: 700;
	letter-spacing: 2px;
	-webkit-transition: all, 0.3s;
	-moz-transition: all, 0.3s;
	-ms-transition: all, 0.3s;
	-o-transition: all, 0.3s;
	transition: all, 0.3s;
	padding: 5px 0;
	display: block;
}

.header__cart {
	text-align: right;
	padding: 24px 0;
}

.header__cart ul {
	display: inline-block;
	margin-right: 25px;
}

.header__cart ul li {
	list-style: none;
	display: inline-block;
	margin-right: 15px;
}

.header__cart ul li:last-child {
	margin-right: 0;
}

.header__cart ul li a {
	position: relative;
}

.header__cart ul li a i {
	font-size: 18px;
	color: #1c1c1c;
}

.header__cart ul li a span {
	height: 13px;
	width: 13px;
	background: var(--primary-color);
	font-size: 10px;
	color: #ffffff;
	line-height: 13px;
	text-align: center;
	font-weight: 700;
	display: inline-block;
	border-radius: 50%;
	position: absolute;
	top: 0;
	right: -12px;
}

.header__cart .header__cart__price {
	font-size: 14px;
	color: #6f6f6f;
	display: inline-block;
}

.header__cart .header__cart__price span {
	color: #252525;
	font-weight: 700;
}

.humberger__menu__wrapper {
	display: none;
}

.humberger__open {
	display: none;
}

/*---------------------
  Hero
-----------------------*/

.hero {
	padding-bottom: 30px;
}

.hero.hero-normal {
	padding-bottom: 30px;
}

.hero.hero-normal .hero__categories {
	position: relative;
}

.hero.hero-normal .hero__categories ul {
	display: none;
	position: absolute;
	left: 0;
	top: 46px;
	width: 100%;
	z-index: 9;
	background: #ffffff;
}

.hero.hero-normal .hero__search {
	margin-bottom: 0;
}

.hero__categories__all {
	background: var(--primary-color);
	position: relative;
	padding: 10px 25px 10px 40px;
	cursor: pointer;
}

.hero__categories__all .hero_category_icon {
	font-size: 16px;
	color: #ffffff;
	margin-right: 10px;

}

.hero__categories__all span {
	font-size: 18px;
	font-weight: 700;
	color: #ffffff;
}



.hero__categories ul {
	border: 1px solid #ebebeb;

	padding-top: 10px;
	padding-bottom: 12px;

}

.hero__categories ul li {
	list-style: none;

}

.hero__categories ul li:hover {
	background-color: rgb(240, 235, 235);

}

.hero__categories ul li a {
	padding-left: 40px;
	font-size: 16px;
	color: #1c1c1c;
	line-height: 39px;
	display: block;

}

.hero__categories ul li:not(:last-child) a {
	border-bottom: 1px solid rgb(226, 224, 224);
}

.hero__search {
	overflow: hidden;
	margin-bottom: 30px;
}

.hero__search__form {
	width: 610px;
	height: 50px;
	
	position: relative;
	float: left;
}

.hero__search__form form .hero__search__categories {
	width: 30%;
	float: left;
	font-size: 16px;
	color: #1c1c1c;
	font-weight: 700;
	padding-left: 18px;
	padding-top: 11px;
	position: relative;
}

.hero__search__form form .hero__search__categories:after {
	position: absolute;
	right: 0;
	top: 14px;
	height: 20px;
	width: 1px;
	background: #000000;
	opacity: 0.1;
	content: "";
}

.hero__search__form form .hero__search__categories span {
	position: absolute;
	right: 14px;
	top: 14px;
}

.hero__search__form form input {
	width: 70%;
	border: none;
	height: 48px;
	font-size: 16px;
	color: #b2b2b2;
	padding-left: 20px;
}

.hero__search__form form input::placeholder {
	color: #b2b2b2;
}

.hero__search__form form button {
	position: absolute;
	right: 0;
	top: -1px;
	height: 50px;
}

.hero__search__phone {
	float: right;
}

.hero__search__phone__icon {
	font-size: 18px;
	color: var(--primary-color);
	height: 50px;
	width: 50px;
	background: #f5f5f5;
	line-height: 50px;
	text-align: center;
	border-radius: 50%;
	float: left;
	margin-right: 20px;
}

.hero__search__phone__text {
	overflow: hidden;
}

.hero__search__phone__text h5 {
	color: #1c1c1c;
	font-weight: 700;
	margin-bottom: 5px;
	font-size: medium;
}

.hero__search__phone__text span {
	font-size: 14px;
	color: #6f6f6f;
}



.hero__text span {
	font-size: 14px;
	text-transform: uppercase;
	font-weight: 700;
	letter-spacing: 4px;
	color: var(--primary-color);
}

.hero__text h2 {
	font-size: 46px;
	color: #252525;
	line-height: 52px;
	font-weight: 700;
	margin: 10px 0;
}

.hero__text p {
	margin-bottom: 35px;
}

.hero_slider_img {
	max-width: 100%;
	height: auto;
	max-height: 400px;
	margin-bottom: 2rem;
}

/* featured */
.product-card-title {
	font-size: 14px;
	color: #222;
}

.featured_heading {
	position: relative;
	display: inline-block;
}

.featured_heading::after {
	position: absolute;
	content: "";
	left: 50%;
	transform: translateX(-50%);
	width: 15%;
	height: 3px;
	bottom: 0;
	background-color: var(--primary-color);
}

.product_price {
	color: var(--primary-color);
	font-weight: bold;
}

.card {
	position: relative;
}

.card-footer {
	z-index: 10;
}

.product-div {
	border-radius: 0;
	transition: all 0.3s ease;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.03);
}

.product-image-container {
	padding-top: 100%;
}

.product-image {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	transition: transform 0.3s ease;
	cursor: pointer;
	pointer-events: auto;
}

.product-option {
	position: absolute;
	top: 50%;
	right: 5%;
	width: 40px;
	height: 80px;
	background-color: var(--primary-color);
	color: white;

}

.footer-text p {
	color: #b2b2b2;
}

.footer-text h5 {
	word-spacing: 4px;
	letter-spacing: 1px;
}

/* product -page start */
.qty-div {
	border: 1px solid #0101;
	padding: 5px 20px;
}

.qty-div input {
	width: 45px;
	border: none;
	outline: none;
	text-align: center;
}

.cart-minus,
.cart-plus {
	color: var(--primary-color);
}



.product_desc .order_now {
	background: rgb(10, 42, 85);
	color: white;
	margin-top: 25px;
	width: 50%;
	height: 35px;
	border: none;
	outline: none;

}

.product_desc .call_now {
	background: rgb(10, 42, 85);
	color: white;
	margin-top: 25px;
	width: 50%;
	height: 35px;
	border: none;
	outline: none;
}

.desc_tab_header {
	margin: 1rem 0;

}

.desc_tab_header button {
	border: 1px solid var(--primary-color);
}
/* ... */

